handle shift activities dates + fix bugs in activities-planning

--- a/discope/apps/booking/src/app/in/booking/activities-planning/_components/week-activities/week-activities.component.scss
+++ b/discope/apps/booking/src/app/in/booking/activities-planning/_components/week-activities/week-activities.component.scss
@@ -84,6 +84,11 @@
                         }
                     }
 
+                    &.group-disabled {
+                        cursor: auto;
+                        opacity: 0.5;
+                    }
+
                     .group-num {
                         position: relative;
                     }
